# knapsack

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  DOGFOOD.md  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
benches/: loop.rs
src/: ab.rs  api.rs  bench.rs  block.rs  config.rs  content_type.rs  gc.rs  hash.rs  hook.rs  install.rs  json.rs  ledger.rs  lib.rs  main.rs  mcp.rs  meta.rs  metrics.rs  pack.rs  pack_doc.rs  read_hook.rs  recall.rs  regex.rs  sha256.rs  status.rs  store.rs  structural.rs  token_estimate.rs  tokenizer.rs  transcript.rs  why_log.rs
src/read_hook/: decide.rs  view.rs
tests/: ab.rs  ab_settings_cache.rs  api_surface.rs  backcompat_and_formats.rs  bench_internals_and_more.rs  block_props.rs  boundaries_and_escapes.rs  cli_flag_forms.rs  cli_numeric_flags.rs  code_splitter.rs  config_merge_adversarial.rs  content_type_props.rs  cross_tool.rs  delta.rs  faithful.rs  fuzz.rs  gc_and_metrics_stress.rs  handle_format.rs  hook.rs  json_adversarial.rs  json_deep.rs  json_pack.rs  ledger_adversarial.rs  ledger_props.rs  lifecycle.rs  log_anchors.rs  mcp.rs  mcp_cli_symmetry_and_disk.rs  mcp_protocol.rs  metrics_props.rs  pack_doc.rs  read_hook.rs  read_hook_recall.rs  recall_robust.rs  recall_slice.rs  regex_adversarial.rs  round10_ab_honesty.rs  round10_concurrent_gc.rs  round10_disk_failure.rs  round10_gc_counters.rs  (+20 more)
tests/common/: mod.rs
tools/: cli_fuzz.sh  dogfood_adversarial.sh  dogfood_bash_shapes.sh  dogfood_boundaries.sh  dogfood_coherence.sh  dogfood_concurrent.sh  dogfood_content_type.sh  dogfood_doctor.sh  dogfood_hygiene.sh  dogfood_inspect.sh  dogfood_install.sh  dogfood_latency.sh  dogfood_longsession.sh  dogfood_matrix.sh  dogfood_mcp_deep.sh  dogfood_paths.sh  dogfood_recall.sh  dogfood_residency.sh  dogfood_self_read.sh  dogfood_session.sh  dogfood_streaming.sh  dogfood_toctou.sh  dogfood_transcript.sh  dogfood_view_header.sh  dogfood_view_quality.sh  hook_e2e.sh  mcp_stress.sh  measure_broad.sh  measure_real.sh  measure_real_heavy.sh  store_gc_race.sh  stress_recall.sh
