[package]
name = "knapsack"
version = "0.0.2"
edition = "2021"
description = "Conditional token reducer for agents: delta-encodes tool output against a session seen-ledger (H(output|seen)) with a byte-exact recall store. Zero-dependency deterministic core."
license = "MIT"

[lib]
name = "knapsack"
path = "src/lib.rs"

[[bin]]
name = "knapsack"
path = "src/main.rs"

[[bench]]
name = "loop"
path = "benches/loop.rs"
harness = false

# Zero external dependencies on purpose: the correctness-critical core compiles to a
# single tiny static binary with no supply-chain surface. Later, behind stable
# boundaries: clap (CLI), serde/serde_json (wire), blake3 (native hashing), regex
# (recall grep), similar (token-level diffs), tree-sitter (syntax-aware blocks).
[dependencies]

[features]
# Default build stays zero-dependency and tiny. `exact-tokenizer` is the opt-in seam for
# offline GPT BPE counting (cl100k/o200k); it currently pulls in no crates — the heavy
# merge tables are vendored data, not a dependency — so the zero-supply-chain promise
# holds even with the feature on. See src/tokenizer.rs.
default = []
exact-tokenizer = []

[profile.release]
opt-level = 3
lto = true
